<resources>
    <string name="APKTOOL_RENAMED_0x40100000">Navigate home</string>
    <string name="APKTOOL_RENAMED_0x40100001">Navigate up</string>
    <string name="APKTOOL_RENAMED_0x40100002">More options</string>
    <string name="APKTOOL_RENAMED_0x40100003">Done</string>
    <string name="APKTOOL_RENAMED_0x40100004">See all</string>
    <string name="APKTOOL_RENAMED_0x40100005">Choose an app</string>
    <string name="APKTOOL_RENAMED_0x40100006">OFF</string>
    <string name="APKTOOL_RENAMED_0x40100007">ON</string>
    <string name="APKTOOL_RENAMED_0x40100008">Alt+</string>
    <string name="APKTOOL_RENAMED_0x40100009">Ctrl+</string>
    <string name="APKTOOL_RENAMED_0x4010000a">delete</string>
    <string name="APKTOOL_RENAMED_0x4010000b">enter</string>
    <string name="APKTOOL_RENAMED_0x4010000c">Function+</string>
    <string name="APKTOOL_RENAMED_0x4010000d">Meta+</string>
    <string name="APKTOOL_RENAMED_0x4010000e">Shift+</string>
    <string name="APKTOOL_RENAMED_0x4010000f">space</string>
    <string name="APKTOOL_RENAMED_0x40100010">Sym+</string>
    <string name="APKTOOL_RENAMED_0x40100011">Menu+</string>
    <string name="APKTOOL_RENAMED_0x40100012">Search…</string>
    <string name="APKTOOL_RENAMED_0x40100013">Clear query</string>
    <string name="APKTOOL_RENAMED_0x40100014">Search query</string>
    <string name="APKTOOL_RENAMED_0x40100015">Search</string>
    <string name="APKTOOL_RENAMED_0x40100016">Submit query</string>
    <string name="APKTOOL_RENAMED_0x40100017">Voice search</string>
    <string name="APKTOOL_RENAMED_0x40100018">Share with</string>
    <string name="APKTOOL_RENAMED_0x40100019">Share with %s</string>
    <string name="APKTOOL_RENAMED_0x4010001a">Collapse</string>
    <string name="APKTOOL_RENAMED_0x4010001b">androidx.startup</string>
    <string name="APKTOOL_RENAMED_0x4010001c">YuePanel</string>
    <string name="APKTOOL_RENAMED_0x4010001d">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="APKTOOL_RENAMED_0x4010001e">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="APKTOOL_RENAMED_0x4010001f">Collapse the bottom sheet</string>
    <string name="APKTOOL_RENAMED_0x40100020">Expand the bottom sheet</string>
    <string name="APKTOOL_RENAMED_0x40100021">Expand halfway</string>
    <string name="APKTOOL_RENAMED_0x40100022">Drag handle double-tapped</string>
    <string name="APKTOOL_RENAMED_0x40100023">Drag handle</string>
    <string name="APKTOOL_RENAMED_0x40100024">Answer</string>
    <string name="APKTOOL_RENAMED_0x40100025">Video</string>
    <string name="APKTOOL_RENAMED_0x40100026">Decline</string>
    <string name="APKTOOL_RENAMED_0x40100027">Hang Up</string>
    <string name="APKTOOL_RENAMED_0x40100028">Incoming call</string>
    <string name="APKTOOL_RENAMED_0x40100029">Ongoing call</string>
    <string name="APKTOOL_RENAMED_0x4010002a">Screening an incoming call</string>
    <string name="APKTOOL_RENAMED_0x4010002b">Characters entered %1$d of %2$d</string>
    <string name="APKTOOL_RENAMED_0x4010002c">Character limit exceeded %1$d of %2$d</string>
    <string name="APKTOOL_RENAMED_0x4010002d">%1$d/%2$d</string>
    <string name="APKTOOL_RENAMED_0x4010002e">Clear text</string>
    <string name="APKTOOL_RENAMED_0x4010002f">Error: invalid</string>
    <string name="APKTOOL_RENAMED_0x40100030">Error</string>
    <string name="APKTOOL_RENAMED_0x40100031">Show dropdown menu</string>
    <string name="APKTOOL_RENAMED_0x40100032">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="APKTOOL_RENAMED_0x40100033">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="APKTOOL_RENAMED_0x40100034">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="APKTOOL_RENAMED_0x40100035">Dialog Icon</string>
    <string name="APKTOOL_RENAMED_0x40100036">Tab</string>
    <string name="APKTOOL_RENAMED_0x40100037">%1$s%2$s</string>
    <string name="APKTOOL_RENAMED_0x40100038">sans-serif-medium</string>
    <string name="APKTOOL_RENAMED_0x40100039">sans-serif</string>
    <string name="APKTOOL_RENAMED_0x4010003a">sans-serif-medium</string>
    <string name="APKTOOL_RENAMED_0x4010003b">sans-serif</string>
    <string name="APKTOOL_RENAMED_0x4010003c">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="APKTOOL_RENAMED_0x4010003d">cubic-bezier(0.3, 0, 0.8, 0.2)</string>
    <string name="APKTOOL_RENAMED_0x4010003e">cubic-bezier(0.1, 0.7, 0.1, 1)</string>
    <string name="APKTOOL_RENAMED_0x4010003f">M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1</string>
    <string name="APKTOOL_RENAMED_0x40100040">cubic-bezier(0.4, 0, 0.2, 1)</string>
    <string name="APKTOOL_RENAMED_0x40100041">cubic-bezier(0.4, 0, 1, 1)</string>
    <string name="APKTOOL_RENAMED_0x40100042">cubic-bezier(0, 0, 0.2, 1)</string>
    <string name="APKTOOL_RENAMED_0x40100043">cubic-bezier(0, 0, 1, 1)</string>
    <string name="APKTOOL_RENAMED_0x40100044">cubic-bezier(0.2, 0, 0, 1)</string>
    <string name="APKTOOL_RENAMED_0x40100045">cubic-bezier(0.3, 0, 1, 1)</string>
    <string name="APKTOOL_RENAMED_0x40100046">cubic-bezier(0, 0, 0, 1)</string>
    <string name="APKTOOL_RENAMED_0x40100047">:</string>
    <string name="APKTOOL_RENAMED_0x40100048">Select AM or PM</string>
    <string name="APKTOOL_RENAMED_0x40100049">%1$s hours</string>
    <string name="APKTOOL_RENAMED_0x4010004a">Select hour</string>
    <string name="APKTOOL_RENAMED_0x4010004b">"%1$s o'clock"</string>
    <string name="APKTOOL_RENAMED_0x4010004c">Select minutes</string>
    <string name="APKTOOL_RENAMED_0x4010004d">%1$s minutes</string>
    <string name="APKTOOL_RENAMED_0x4010004e">cubic-bezier(0.4, 0.0, 1.0, 1.0)</string>
    <string name="APKTOOL_RENAMED_0x4010004f">cubic-bezier(0.0, 0.0, 0.2, 1.0)</string>
    <string name="APKTOOL_RENAMED_0x40100050">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="APKTOOL_RENAMED_0x40100051">cubic-bezier(0.0, 0.0, 1.0, 1.0)</string>
    <string name="APKTOOL_RENAMED_0x40100052">cubic-bezier(0.4, 0.0, 0.2, 1.0)</string>
    <string name="APKTOOL_RENAMED_0x40100053">Range end</string>
    <string name="APKTOOL_RENAMED_0x40100054">Range start</string>
    <string name="APKTOOL_RENAMED_0x40100055">Value</string>
    <string name="APKTOOL_RENAMED_0x40100056">AM</string>
    <string name="APKTOOL_RENAMED_0x40100057">Switch to clock mode for the time input.</string>
    <string name="APKTOOL_RENAMED_0x40100058">Hour</string>
    <string name="APKTOOL_RENAMED_0x40100059">Minute</string>
    <string name="APKTOOL_RENAMED_0x4010005a">PM</string>
    <string name="APKTOOL_RENAMED_0x4010005b">Select time</string>
    <string name="APKTOOL_RENAMED_0x4010005c">Switch to text input mode for the time input.</string>
    <string name="APKTOOL_RENAMED_0x4010005d">New notification</string>
    <string name="APKTOOL_RENAMED_0x4010005e">M14,18.2 11.4,15.6 10,17 14,21 22,13 20.6,11.6z</string>
    <string name="APKTOOL_RENAMED_0x4010005f">icon</string>
    <string name="APKTOOL_RENAMED_0x40100060">M13.4,15 11,15 11,17 13.4,17 21,17 21,15z</string>
    <string name="APKTOOL_RENAMED_0x40100061">icon path</string>
    <string name="APKTOOL_RENAMED_0x40100062">M23,7H9C7.9,7,7,7.9,7,9v14c0,1.1,0.9,2,2,2h14c1.1,0,2-0.9,2-2V9C25,7.9,24.1,7,23,7z</string>
    <string name="APKTOOL_RENAMED_0x40100063">button</string>
    <string name="APKTOOL_RENAMED_0x40100064">button path</string>
    <string name="APKTOOL_RENAMED_0x40100065">M23,7H9C7.9,7,7,7.9,7,9v14c0,1.1,0.9,2,2,2h14c1.1,0,2-0.9,2-2V9C25,7.9,24.1,7,23,7z M23,23H9V9h14V23z</string>
    <string name="APKTOOL_RENAMED_0x40100066">Checked</string>
    <string name="APKTOOL_RENAMED_0x40100067">Partially checked</string>
    <string name="APKTOOL_RENAMED_0x40100068">Not checked</string>
    <string name="APKTOOL_RENAMED_0x40100069">Remove %1$s</string>
    <string name="APKTOOL_RENAMED_0x4010006a">More than %1$d new notifications</string>
    <string name="APKTOOL_RENAMED_0x4010006b">%1$d%2$s</string>
    <string name="APKTOOL_RENAMED_0x4010006c">Change to next month</string>
    <string name="APKTOOL_RENAMED_0x4010006d">Change to previous month</string>
    <string name="APKTOOL_RENAMED_0x4010006e">Start date selection: %1$s – End date selection: %2$s</string>
    <string name="APKTOOL_RENAMED_0x4010006f">Current selection: %1$s</string>
    <string name="APKTOOL_RENAMED_0x40100070">none</string>
    <string name="APKTOOL_RENAMED_0x40100071">Cancel</string>
    <string name="APKTOOL_RENAMED_0x40100072">OK</string>
    <string name="APKTOOL_RENAMED_0x40100073">%1$s</string>
    <string name="APKTOOL_RENAMED_0x40100074">Select Date</string>
    <string name="APKTOOL_RENAMED_0x40100075">Selected date</string>
    <string name="APKTOOL_RENAMED_0x40100076">%1$s</string>
    <string name="APKTOOL_RENAMED_0x40100077">End date %1$s</string>
    <string name="APKTOOL_RENAMED_0x40100078">Invalid format.</string>
    <string name="APKTOOL_RENAMED_0x40100079">Example: %1$s</string>
    <string name="APKTOOL_RENAMED_0x4010007a">Use: %1$s</string>
    <string name="APKTOOL_RENAMED_0x4010007b">Invalid range.</string>
    <string name="APKTOOL_RENAMED_0x4010007c">Navigate to current year %1$d</string>
    <string name="APKTOOL_RENAMED_0x4010007d">Navigate to year %1$d</string>
    <string name="APKTOOL_RENAMED_0x4010007e">Out of range: %1$s</string>
    <string name="APKTOOL_RENAMED_0x4010007f">Start date – %1$s</string>
    <string name="APKTOOL_RENAMED_0x40100080">%1$s – End date</string>
    <string name="APKTOOL_RENAMED_0x40100081">%1$s – %2$s</string>
    <string name="APKTOOL_RENAMED_0x40100082">Select Range</string>
    <string name="APKTOOL_RENAMED_0x40100083">Start date – End date</string>
    <string name="APKTOOL_RENAMED_0x40100084">Save</string>
    <string name="APKTOOL_RENAMED_0x40100085">Start date %1$s</string>
    <string name="APKTOOL_RENAMED_0x40100086">Date</string>
    <string name="APKTOOL_RENAMED_0x40100087">End date</string>
    <string name="APKTOOL_RENAMED_0x40100088">Start date</string>
    <string name="APKTOOL_RENAMED_0x40100089">d</string>
    <string name="APKTOOL_RENAMED_0x4010008a">m</string>
    <string name="APKTOOL_RENAMED_0x4010008b">y</string>
    <string name="APKTOOL_RENAMED_0x4010008c">Today %1$s</string>
    <string name="APKTOOL_RENAMED_0x4010008d">Switch to calendar input mode</string>
    <string name="APKTOOL_RENAMED_0x4010008e">Tap to switch to Calendar view</string>
    <string name="APKTOOL_RENAMED_0x4010008f">Switch to text input mode</string>
    <string name="APKTOOL_RENAMED_0x40100090">Tap to switch to year view</string>
    <string name="APKTOOL_RENAMED_0x40100091">circle_group</string>
    <string name="APKTOOL_RENAMED_0x40100092">M4,16 A12,12 0 0,1 16,4 H16 A12,12 0 0,1 16,28 H16 A12,12 0 0,1 4,16</string>
    <string name="APKTOOL_RENAMED_0x40100093">M0,16 A11,11 0 0,1 11,5 H21 A11,11 0 0,1 21,27 H11 A11,11 0 0,1 0,16</string>
    <string name="APKTOOL_RENAMED_0x40100094">circle</string>
    <string name="APKTOOL_RENAMED_0x40100095">M2,16 A14,14 0 0,1 16,2 H16 A14,14 0 0,1 16,30 H16 A14,14 0 0,1 2,16</string>
    <string name="APKTOOL_RENAMED_0x40100096">M8,16 A8,8 0 0,1 16,8 H16 A8,8 0 0,1 16,24 H16 A8,8 0 0,1 8,16</string>
    <string name="APKTOOL_RENAMED_0x40100097">M1,16 A15,15 0 0,1 16,1 H36 A15,15 0 0,1 36,31 H16 A15,15 0 0,1 1,16</string>
    <string name="APKTOOL_RENAMED_0x40100098">M0,16 A16,16 0 0,1 16,0 H36 A16,16 0 0,1 36,32 H16 A16,16 0 0,1 0,16</string>
    <string name="APKTOOL_RENAMED_0x40100099">Cancel</string>
    <string name="APKTOOL_RENAMED_0x4010009a">OK</string>
    <string name="APKTOOL_RENAMED_0x4010009b">YuePanel</string>
    <string name="APKTOOL_RENAMED_0x4010009c">Show password</string>
</resources>