<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:id="@id/APKTOOL_RENAMED_0x400901e1" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="?android:textColorPrimary" android:gravity="center_vertical" android:id="@id/APKTOOL_RENAMED_0x400901e0" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginBottom="2.0dp" android:drawablePadding="0.0dp" />
    <ImageView android:layout_gravity="center_vertical" android:id="@id/APKTOOL_RENAMED_0x400901e2" android:focusable="true" android:layout_width="wrap_content" android:layout_height="match_parent" android:contentDescription="@string/APKTOOL_RENAMED_0x40100015" style="?APKTOOL_RENAMED_0x4004000b" />
    <LinearLayout android:orientation="horizontal" android:id="@id/APKTOOL_RENAMED_0x400901e5" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginLeft="8.0dp" android:layout_marginRight="8.0dp" android:layout_weight="1.0" android:layoutDirection="locale">
        <ImageView android:layout_gravity="center_vertical" android:id="@id/APKTOOL_RENAMED_0x400901e7" android:visibility="gone" android:layout_width="@dimen/APKTOOL_RENAMED_0x40070029" android:layout_height="wrap_content" android:scaleType="centerInside" style="@style/APKTOOL_RENAMED_0x40110159" />
        <LinearLayout android:layout_gravity="center_vertical" android:orientation="horizontal" android:id="@id/APKTOOL_RENAMED_0x400901e9" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_weight="1.0">
            <view android:ellipsize="end" android:layout_gravity="center_vertical" android:id="@id/APKTOOL_RENAMED_0x400901ea" android:background="@null" android:paddingLeft="@dimen/APKTOOL_RENAMED_0x4007002a" android:paddingRight="@dimen/APKTOOL_RENAMED_0x4007002b" android:layout_width="0.0dp" android:layout_height="36.0dp" android:singleLine="true" android:layout_weight="1.0" android:inputType="textAutoComplete|textNoSuggestions" android:dropDownAnchor="@id/APKTOOL_RENAMED_0x400901e5" android:imeOptions="actionSearch" android:dropDownHeight="wrap_content" android:dropDownHorizontalOffset="0.0dp" android:dropDownVerticalOffset="0.0dp" class="androidx.appcompat.widget.SearchView$SearchAutoComplete" />
            <ImageView android:layout_gravity="center_vertical" android:id="@id/APKTOOL_RENAMED_0x400901e3" android:background="?APKTOOL_RENAMED_0x40040384" android:paddingLeft="8.0dp" android:paddingRight="8.0dp" android:focusable="true" android:layout_width="wrap_content" android:layout_height="match_parent" android:contentDescription="@string/APKTOOL_RENAMED_0x40100013" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@id/APKTOOL_RENAMED_0x4009023d" android:layout_width="wrap_content" android:layout_height="match_parent">
            <ImageView android:layout_gravity="center_vertical" android:id="@id/APKTOOL_RENAMED_0x400901e6" android:background="?APKTOOL_RENAMED_0x40040384" android:paddingLeft="16.0dp" android:paddingRight="16.0dp" android:focusable="true" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="match_parent" android:contentDescription="@string/APKTOOL_RENAMED_0x40100016" />
            <ImageView android:layout_gravity="center_vertical" android:id="@id/APKTOOL_RENAMED_0x400901eb" android:background="?APKTOOL_RENAMED_0x40040384" android:paddingLeft="16.0dp" android:paddingRight="16.0dp" android:focusable="true" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="match_parent" android:contentDescription="@string/APKTOOL_RENAMED_0x40100017" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
