<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:paddingBottom="2.0dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:accessibilityPaneTitle="@string/APKTOOL_RENAMED_0x4010005b"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:id="@id/APKTOOL_RENAMED_0x40090105" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dp" android:text="@string/APKTOOL_RENAMED_0x4010005b" android:importantForAccessibility="no" android:layout_marginStart="24.0dp" app:APKTOOL_RENAMED_0x40040279="APKTOOL_RENAMED_0x400901aa" app:APKTOOL_RENAMED_0x4004027d="APKTOOL_RENAMED_0x400901aa" style="?APKTOOL_RENAMED_0x400402e1" />
    <com.google.android.material.timepicker.TimePickerView android:id="@id/APKTOOL_RENAMED_0x40090154" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="24.0dp" android:layout_marginTop="@dimen/APKTOOL_RENAMED_0x40070226" android:layout_marginRight="24.0dp" android:layout_marginBottom="@dimen/APKTOOL_RENAMED_0x40070225" app:APKTOOL_RENAMED_0x40040261="@id/APKTOOL_RENAMED_0x40090152" app:APKTOOL_RENAMED_0x40040266="APKTOOL_RENAMED_0x400901aa" app:APKTOOL_RENAMED_0x40040279="APKTOOL_RENAMED_0x400901aa" app:APKTOOL_RENAMED_0x4004027d="APKTOOL_RENAMED_0x400901aa" />
    <ViewStub android:id="@id/APKTOOL_RENAMED_0x4009014f" android:layout="@layout/APKTOOL_RENAMED_0x400c0065" android:inflatedId="@id/APKTOOL_RENAMED_0x4009014f" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="24.0dp" android:layout_marginTop="44.0dp" android:layout_marginRight="24.0dp" android:layout_marginBottom="@dimen/APKTOOL_RENAMED_0x40070225" app:APKTOOL_RENAMED_0x40040261="@id/APKTOOL_RENAMED_0x40090152" app:APKTOOL_RENAMED_0x40040266="APKTOOL_RENAMED_0x400901aa" app:APKTOOL_RENAMED_0x40040279="APKTOOL_RENAMED_0x400901aa" app:APKTOOL_RENAMED_0x4004027d="APKTOOL_RENAMED_0x400901aa" />
    <com.google.android.material.button.MaterialButton android:id="@id/APKTOOL_RENAMED_0x40090152" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="12.0dp" app:APKTOOL_RENAMED_0x40040260="APKTOOL_RENAMED_0x400901aa" app:APKTOOL_RENAMED_0x40040279="APKTOOL_RENAMED_0x400901aa" style="?APKTOOL_RENAMED_0x40040219" />
    <Button android:id="@id/APKTOOL_RENAMED_0x40090150" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dp" android:minWidth="72.0dp" android:text="@string/APKTOOL_RENAMED_0x40100099" android:layout_marginEnd="8.0dp" app:APKTOOL_RENAMED_0x40040267="@id/APKTOOL_RENAMED_0x40090153" app:APKTOOL_RENAMED_0x4004027d="@id/APKTOOL_RENAMED_0x40090152" style="?APKTOOL_RENAMED_0x40040072" />
    <Button android:id="@id/APKTOOL_RENAMED_0x40090153" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dp" android:minWidth="64.0dp" android:text="@string/APKTOOL_RENAMED_0x4010009a" android:layout_marginEnd="8.0dp" app:APKTOOL_RENAMED_0x40040266="APKTOOL_RENAMED_0x400901aa" app:APKTOOL_RENAMED_0x4004027d="@id/APKTOOL_RENAMED_0x40090152" style="?APKTOOL_RENAMED_0x40040072" />
</androidx.constraintlayout.widget.ConstraintLayout>
